# lib/api/model/index.ts
@@ -19,17 +19,20 @@ export * from './getAllProblemsDifficulty';
 export * from './getAllProblemsParams';
 export * from './getAllSubmissionsParams';
 export * from './getAllTagsParams';
+export * from './getCategoriesWithPostsParams';
 export * from './getPostBySlugParams';
 export * from './getProblemBySlugParams';
 export * from './getSitemapCategoriesParams';
 export * from './getSitemapPostsParams';
 export * from './getSolvedProblemsParams';
 export * from './postDTO';
+export * from './postInfo';
 export * from './postTranslationDTO';
 export * from './problemDetailDTO';
 export * from './problemDetailDTODifficulty';
 export * from './problemListDTO';
 export * from './problemListDTODifficulty';
+export * from './publicCategoryPostsDTO';
 export * from './refreshVM';
 export * from './sitemapCategoryDTO';
 export * from './sitemapPostDTO';
